# cpp_non_linear_solvers

./: .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/solvers/: CMakeLists.txt  solvers_lib
libraries/solvers/includes/: BisectionMethod.hpp  BrentsMethod.hpp  DekkersMethod.hpp  FalsePositionMethod.hpp  NewtonRaphsonMethod.hpp
libraries/solvers/src/: BisectionMethod.cpp  BrentsMethod.cpp  DekkersMethod.cpp  FalsePositionMethod.cpp  NewtonRaphsonMethod.cpp
libraries/utils/: CMakeLists.txt  utils_lib
libraries/utils/includes/: common.hpp  functions.hpp
libraries/utils/src/: common.cpp  functions.cpp
non_linear_solvers/: CMakeLists.txt  non_linear_solvers
non_linear_solvers/includes/: BisectionMethod.hpp  BrentsMethod.hpp  DekkersMethod.hpp  FalsePositionMethod.hpp  Function.hpp  NewtonRaphsonMethod.hpp  common.hpp  non_linear_solvers.hpp
non_linear_solvers/src/: BisectionMethod.cpp  BrentsMethod.cpp  DekkersMethod.cpp  FalsePositionMethod.cpp  Function.cpp  NewtonRaphsonMethod.cpp  common.cpp  non_linear_solvers.cpp
work/: CMakeLists.txt
